Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Php-cli-app by herrera-io</title>
+    <title>CLI App by herrera-io</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Php-cli-app</h1>
+        <h1>CLI App</h1>
         <p>A simplified CLI application template built on Symfony Console.</p>
 
         <p class="view"><a href="https://github.com/herrera-io/php-cli-app">View the Project on GitHub <small>herrera-io/php-cli-app</small></a></p>
